align issues, and IE dropdown

--- a/client/app/less/al/misc.less
+++ b/client/app/less/al/misc.less
@@ -4,7 +4,7 @@
     // applies to all tables, wrap long texts
     .table{
         table-layout: fixed;
-        td{            
+        td{
            word-wrap: break-word;
         }
     }
@@ -147,13 +147,13 @@
     }
     .loader_indicator {
         width: 200px;
-        height: 100px;        
+        height: 100px;
         text-align: center;
         font-size: 24px;
         //margin-top: 34%;
         color: #666;
         display: block;
-        margin-right: auto; 
+        margin-right: auto;
         margin-left: auto;
         padding: 20px 0;
         font-family: BrandonRegular;
@@ -225,13 +225,16 @@
         vertical-align: top;
         appearance: none;
         border:0;
-        outline:0;       
+        outline:0;
         background: transparent;
 
-        
+
+    }
+    select.cell-select::-ms-expand{
+      display:none;
     }
     .withArrow{
-            background:url('@{images_al_path}/dropdown.png') no-repeat center center;   
+            background:url('@{images_al_path}/dropdown.png') no-repeat center center;
     }
 
     .cell-checkbox {
@@ -285,7 +288,7 @@
             margin-top: 20px;
             input[type="radio"],input[type="checkbox"]{
                 margin-top: 10px;
-            } 
+            }
             .sub-option{
                 padding-left: 20px;
             }
@@ -337,7 +340,7 @@
         width: 90px;
         padding: 0;
     }
-    
+
     //add Modal transparent
     #modal-container{
         .modal{
@@ -388,7 +391,7 @@
         }
         p{
             padding-left: 0;
-            
+
         }
         .error-modal{
             color: #e64b3b;
@@ -447,7 +450,7 @@
         }
         p{
             padding-left: 0;
-            
+
         }
         .error-modal{
             color: #e64b3b;
@@ -500,10 +503,9 @@
             border: 0;
             border-radius: 0;
             padding: 5px 0px;
-            margin-right: 13px;
+            margin:0 15px 10px 0;
             width: 150px;
-            margin-bottom: 6px;
-              
+
             //  margin-right: 7px;
               &:disabled{
                   color: white;
@@ -516,13 +518,14 @@
            height: 30px;
            &:disabled{
                background: @gray;
+               width: 40px;
            }
         }
         input[type='checkbox']{
             display: inline-block;
             vertical-align: middle;
         }
-    
+
         label{
             font-weight:normal;
         }
@@ -531,32 +534,32 @@
         }
         p{
             margin:0;
-            //display: flex; 
+            //display: flex;
             margin-bottom: 20px;
             >*{
                 display: inline-block;
                 //vertical-align: bottom;
                 margin-bottom:0;
             }
-                   
+
         }
         #contactSelect{
             flex-grow: 1;
         }
         .separator{
-             margin-right: 15px;
-             display: inline-block;             
-             vertical-align: top; 
-             select{ 
+             margin:0 15px 10px 0;
+             display: inline-block;
+             vertical-align: top;
+             select{
                  width: 120px;
-             }     
+             }
              input[type=text]{
                  width: 40px;
                  text-align: center;
-             }     
+             }
         }
         .row{
-            margin-bottom: 25px;
+            margin-bottom: 20px;
         }
     }
 
@@ -735,7 +738,7 @@
                     select{
                         padding-top: 7px;
                     }
-                }     
+                }
             }
         }
     }
